feat(global): Support log in & out function
