# internal/apiserver/service/verify.pb.go
@@ -1,0 +1,221 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.33.0
+// 	protoc        v3.21.1
+// source: verify.proto
+
+package service
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type AccPasswd struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Username string `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
+	Password string `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
+}
+
+func (x *AccPasswd) Reset() {
+	*x = AccPasswd{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_verify_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *AccPasswd) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AccPasswd) ProtoMessage() {}
+
+func (x *AccPasswd) ProtoReflect() protoreflect.Message {
+	mi := &file_verify_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AccPasswd.ProtoReflect.Descriptor instead.
+func (*AccPasswd) Descriptor() ([]byte, []int) {
+	return file_verify_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *AccPasswd) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *AccPasswd) GetPassword() string {
+	if x != nil {
+		return x.Password
+	}
+	return ""
+}
+
+type VerifiedResult struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	IsVerified bool `protobuf:"varint,1,opt,name=is_verified,json=isVerified,proto3" json:"is_verified,omitempty"`
+}
+
+func (x *VerifiedResult) Reset() {
+	*x = VerifiedResult{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_verify_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *VerifiedResult) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*VerifiedResult) ProtoMessage() {}
+
+func (x *VerifiedResult) ProtoReflect() protoreflect.Message {
+	mi := &file_verify_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use VerifiedResult.ProtoReflect.Descriptor instead.
+func (*VerifiedResult) Descriptor() ([]byte, []int) {
+	return file_verify_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *VerifiedResult) GetIsVerified() bool {
+	if x != nil {
+		return x.IsVerified
+	}
+	return false
+}
+
+var File_verify_proto protoreflect.FileDescriptor
+
+var file_verify_proto_rawDesc = []byte{
+	0x0a, 0x0c, 0x76, 0x65, 0x72, 0x69, 0x66, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x43,
+	0x0a, 0x09, 0x41, 0x63, 0x63, 0x50, 0x61, 0x73, 0x73, 0x77, 0x64, 0x12, 0x1a, 0x0a, 0x08, 0x75,
+	0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x75,
+	0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77,
+	0x6f, 0x72, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77,
+	0x6f, 0x72, 0x64, 0x22, 0x31, 0x0a, 0x0e, 0x56, 0x65, 0x72, 0x69, 0x66, 0x69, 0x65, 0x64, 0x52,
+	0x65, 0x73, 0x75, 0x6c, 0x74, 0x12, 0x1f, 0x0a, 0x0b, 0x69, 0x73, 0x5f, 0x76, 0x65, 0x72, 0x69,
+	0x66, 0x69, 0x65, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x0a, 0x69, 0x73, 0x56, 0x65,
+	0x72, 0x69, 0x66, 0x69, 0x65, 0x64, 0x32, 0x33, 0x0a, 0x06, 0x56, 0x65, 0x72, 0x69, 0x66, 0x79,
+	0x12, 0x29, 0x0a, 0x0a, 0x56, 0x65, 0x72, 0x69, 0x66, 0x79, 0x55, 0x73, 0x65, 0x72, 0x12, 0x0a,
+	0x2e, 0x41, 0x63, 0x63, 0x50, 0x61, 0x73, 0x73, 0x77, 0x64, 0x1a, 0x0f, 0x2e, 0x56, 0x65, 0x72,
+	0x69, 0x66, 0x69, 0x65, 0x64, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x42, 0x2a, 0x5a, 0x28, 0x61,
+	0x6c, 0x67, 0x6f, 0x68, 0x75, 0x62, 0x2d, 0x66, 0x6f, 0x72, 0x75, 0x6d, 0x2f, 0x69, 0x6e, 0x74,
+	0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x61, 0x70, 0x69, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_verify_proto_rawDescOnce sync.Once
+	file_verify_proto_rawDescData = file_verify_proto_rawDesc
+)
+
+func file_verify_proto_rawDescGZIP() []byte {
+	file_verify_proto_rawDescOnce.Do(func() {
+		file_verify_proto_rawDescData = protoimpl.X.CompressGZIP(file_verify_proto_rawDescData)
+	})
+	return file_verify_proto_rawDescData
+}
+
+var file_verify_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_verify_proto_goTypes = []interface{}{
+	(*AccPasswd)(nil),      // 0: AccPasswd
+	(*VerifiedResult)(nil), // 1: VerifiedResult
+}
+var file_verify_proto_depIdxs = []int32{
+	0, // 0: Verify.VerifyUser:input_type -> AccPasswd
+	1, // 1: Verify.VerifyUser:output_type -> VerifiedResult
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_verify_proto_init() }
+func file_verify_proto_init() {
+	if File_verify_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_verify_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*AccPasswd); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_verify_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*VerifiedResult); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_verify_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_verify_proto_goTypes,
+		DependencyIndexes: file_verify_proto_depIdxs,
+		MessageInfos:      file_verify_proto_msgTypes,
+	}.Build()
+	File_verify_proto = out.File
+	file_verify_proto_rawDesc = nil
+	file_verify_proto_goTypes = nil
+	file_verify_proto_depIdxs = nil
+}
